# snabbkarta

./: .gitignore  20170608_symboluppsattning_isom_2017_ocad_12.ocd  Cargo.toml  README.md  build.rs
libWMM/: GeomagnetismHeader.h  GeomagnetismLibrary.c  magnetic_declination.c  magnetic_declination.h
libWMM/libWMM.xcodeproj/: project.pbxproj
libWMM/libWMM.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
libWMM/libWMM.xcodeproj/xcuserdata/erik.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: boundary.rs  cliffs.rs  contours.rs  dtm.rs  ffi_helpers.rs  geometry.rs  hexgrid.rs  lakes.rs  lantmateriet.rs  las.rs  linear_regression.rs  main.rs  marshes.rs  meridians.rs  ml_input_data.rs  ocad.rs  osm.rs  rek.rs  shapefiles.rs  sweref.rs  sweref_to_wgs84.rs  water_model.rs  wgs84.rs  wmm.rs
