[package]
name = "snabbkarta"
version = "0.2.1"
authors = ["Erik Aderstedt <erik@aderstedtsoftware.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"
delaunator = "0.2"
indicatif = "0.13.0"
colored = "1.9.2"
osm-xml = "0.6.2"
byteorder = "1.3.2"
dbase = "0.1.0"
minreq = { version = "*", features = ["https"] }
#geo-booleanop = "0.1.4"
geo = "0.12.2"
flo_curves = "0.3.1"
nalgebra = "0.19.0"